Update Belarusian Translation
Fix some mistakes and add missing lines

--- a/src/main/resources/assets/modmenu/lang/be_by.json
+++ b/src/main/resources/assets/modmenu/lang/be_by.json
@@ -3,25 +3,25 @@
   "key.modmenu.open_menu": "Адкрыць Mod Menu",
   "modmenu.title": "Моды",
   "modmenu.nameTranslation.modmenu": "Mod Menu",
-  "modmenu.descriptionTranslation.modmenu": "Дадае меню модаў для прагляду спіса модаў, якія ў вас усталяваны.",
+  "modmenu.descriptionTranslation.modmenu": "Дадае меню для прагляду спіса модаў, якія ў вас усталяваны.",
   
   "modmenu.loaded": "(%s загружана)",
   "modmenu.loaded.short": "(%s)",
-  "modmenu.loaded.69.secret": "(%s загружана...файна)",
+  "modmenu.loaded.69.secret": "(%s загружана...найс)",
   "modmenu.loaded.420.secret": "(%s загружана...трасца)",
   "modmenu.mods.n": " (%s моды)",
   "modmenu.mods.1": " (%s мод)",
-  "modmenu.mods.69.secret": " (%s модаў...файна)",
+  "modmenu.mods.69.secret": " (%s модаў...найс)",
   "modmenu.mods.420.secret": " (%s модаў...дымна)",
   
   "modmenu.search": "Пошук модаў",
-  "modmenu.searchTerms.library": "API бібліятэка",
-  "modmenu.searchTerms.patchwork": "patchwork forge fml",
-  "modmenu.searchTerms.modpack": "зборка зборка",
+  "modmenu.searchTerms.library": "API бібліятэка апі",
+  "modmenu.searchTerms.patchwork": "patchwork forge fml пачворк пэчворк фордж форч фмл",
+  "modmenu.searchTerms.modpack": "зборка пак модпак",
   "modmenu.searchTerms.deprecated": "састарэлы неактуальны стары",
   "modmenu.searchTerms.clientside": "бок-кліента бок-гульні",
-  "modmenu.searchTerms.configurable": "Налады наладжваемый насладжваемыя опцыі",
-  "modmenu.searchTerms.hasUpdate": "абнаўленні версія",
+  "modmenu.searchTerms.configurable": "Налады наладжваемы насладжваемыя опцыі",
+  "modmenu.searchTerms.hasUpdate": "абнаўленні абнауленні абнаўленьні версія",
   
   "modmenu.toggleFilterOptions": "Уключыць фільтр",
   "modmenu.showingMods.n": "Паказваецца %s модаў",
@@ -40,13 +40,13 @@
   "modmenu.badge.modpack": "Зборка",
   "modmenu.badge.minecraft": "Minecraft",
   
-  "modmenu.dropInfo.line1": "Перацягніце файлу ў",
+  "modmenu.dropInfo.line1": "Перацягніце файлы ў",
   "modmenu.dropInfo.line2": "гэта акно, каб дадаць моды",
-  "modmenu.dropConfirm": "Вы хаціце скапіяваць наступныя моды у вашу папку mods?",
-  "modmenu.dropSuccessful.line1": "Моды скапіяваны паспяхова",
+  "modmenu.dropConfirm": "Ці вы хочаце скапіяваць наступныя моды ў вашу папку mods?",
+  "modmenu.dropSuccessful.line1": "Моды паспяхова скапіяваны",
   "modmenu.dropSuccessful.line2": "Перазапусціце гульню, каб загрузіць моды",
   
-  "modmenu.modIdToolTip": "Мод ID: %s",
+  "modmenu.modIdToolTip": "ID мода: %s",
   "modmenu.authorPrefix": "ад %s",
   "modmenu.config": "Змяніць налады",
   "modmenu.configure": "Наладзіць...",
@@ -54,15 +54,16 @@
   "modmenu.website": "Сайт",
   "modmenu.issues": "Пажаданні",
   
-  "modmenu.credits": "Аўтары:",
-  "modmenu.viewCredits": "Паглядзець аўтараў",
+  "modmenu.credits": "Стваральнікі:",
+  "modmenu.viewCredits": "Праглядзець тытры",
   "modmenu.license": "Ліцэнзія:",
   "modmenu.links": "Спасылкі:",
-  "modmenu.source": "Крыніца",
+  "modmenu.source": "Зыходны код",
   "modmenu.hasUpdate": "Даступна абнаўленне:",
   "modmenu.experimental": "(Праверка абнаўленняў у Mod Menu з'яўляецца эксперыментам!)",
   "modmenu.childHasUpdate": "Абнаўленне дзіцячага мода даступна.",
   "modmenu.updateText": "v%s на %s",
+  "modmenu.install_version": "Усталяваць версію %s",
   "modmenu.downloadLink": "Спампаваць",
   
   "modmenu.buymeacoffee": "Buy Me a Coffee",
@@ -72,8 +73,8 @@
   "modmenu.discord": "Discord",
   "modmenu.donate": "Donate",
   "modmenu.flattr": "Flattr",
-  "modmenu.github_releases": "GitHub рэлізы",
-  "modmenu.github_sponsors": "GitHub спонсары",
+  "modmenu.github_releases": "GitHub (рэлізы)",
+  "modmenu.github_sponsors": "GitHub (спонсары)",
   "modmenu.kofi": "Ko-fi",
   "modmenu.liberapay": "Liberapay",
   "modmenu.mastodon": "Mastodon",
@@ -105,16 +106,17 @@
   "modmenu.javaDistributionName": "Бягучая: %s",
   
   "modmenu.options": "Налады Mod Menu",
-  "option.modmenu.sorting": "Сартыроўка",
+  "option.modmenu.sorting": "Сартаванне",
   "option.modmenu.sorting.ascending": "A-Z",
   "option.modmenu.sorting.descending": "Z-A",
+  "option.modmenu.sorting.has_update": "Ёсць абнаўленні",
   "option.modmenu.show_libraries": "Бібліятэкі",
   "option.modmenu.show_libraries.true": "Паказаны",
   "option.modmenu.show_libraries.false": "Схаваны",
   "option.modmenu.hide_config_buttons": "Кнопка налад",
   "option.modmenu.hide_config_buttons.true": "Схавана",
   "option.modmenu.hide_config_buttons.false": "Паказана",
-  "option.modmenu.hide_badges": "Іконкі модаў",
+  "option.modmenu.hide_badges": "Значкі модаў",
   "option.modmenu.hide_badges.true": "Схаваны",
   "option.modmenu.hide_badges.false": "Паказаны",
   "option.modmenu.compact_list": "Спіс",
@@ -123,7 +125,7 @@
   "option.modmenu.hide_mod_links": "Спасылкі модаў",
   "option.modmenu.hide_mod_links.true": "Схаваны",
   "option.modmenu.hide_mod_links.false": "Паказаны",
-  "option.modmenu.hide_mod_credits": "АЎтары модаў",
+  "option.modmenu.hide_mod_credits": "Аўтары модаў",
   "option.modmenu.hide_mod_credits.true": "Схаваны",
   "option.modmenu.hide_mod_credits.false": "Паказаны",
   "option.modmenu.hide_mod_license": "Ліцэнзія модаў",
@@ -131,18 +133,18 @@
   "option.modmenu.hide_mod_license.false": "Паказана",
   "option.modmenu.count_children": "Дзіцячыя моды",
   "option.modmenu.count_children.true": "Улічваюцца",
-  "option.modmenu.count_children.false": "Не улічваюцца",
+  "option.modmenu.count_children.false": "Не ўлічваюцца",
   "option.modmenu.count_libraries": "Бібліятэкі",
   "option.modmenu.count_libraries.true": "Улічваюцца",
   "option.modmenu.count_libraries.false": "Не ўлічваюцца",
   "option.modmenu.count_hidden_mods": "Схаваныя моды",
   "option.modmenu.count_hidden_mods.true": "Улічваюцца",
   "option.modmenu.count_hidden_mods.false": "Не ўлічваюцца",
-  "option.modmenu.mod_count_location": "Лічба модаў",
-  "option.modmenu.mod_count_location.title_screen": "Вугал экрана",
-  "option.modmenu.mod_count_location.mods_button": "Кнопка модаў",
+  "option.modmenu.mod_count_location": "Колькасць модаў",
+  "option.modmenu.mod_count_location.title_screen": "У куце экрана",
+  "option.modmenu.mod_count_location.mods_button": "На кнопцы модаў",
   "option.modmenu.mod_count_location.title_screen_and_mods_button": "Абодва",
-  "option.modmenu.mod_count_location.none": "Ніяк",
+  "option.modmenu.mod_count_location.none": "Нідзе",
   "option.modmenu.easter_eggs": "Сакрэты",
   "option.modmenu.easter_eggs.true": "Уключаны",
   "option.modmenu.easter_eggs.false": "Адключаны",
@@ -150,16 +152,18 @@
   "option.modmenu.mods_button_style.classic": "Ніжэй Realms",
   "option.modmenu.mods_button_style.replace_realms": "Замест Realms",
   "option.modmenu.mods_button_style.shrink": "Побач",
-  "option.modmenu.mods_button_style.icon": "Іконкі",
+  "option.modmenu.mods_button_style.icon": "Значок",
   "option.modmenu.game_menu_button_style": "Меню гульні",
-  "option.modmenu.game_menu_button_style.icon": "Іконка",
-  "option.modmenu.random_java_colors": "Java колер",
+  "option.modmenu.game_menu_button_style.insert": "Уставіць",
+  "option.modmenu.game_menu_button_style.replace": "Замяніць",
+  "option.modmenu.game_menu_button_style.icon": "Значок",
+  "option.modmenu.random_java_colors": "Колер Java",
   "option.modmenu.random_java_colors.true": "Ад распрацоўшчыка",
   "option.modmenu.random_java_colors.false": "Заўсёды чырвоны",
   "option.modmenu.translate_names": "Назвы",
-  "option.modmenu.translate_names.true": "Лакалізаваны",
-  "option.modmenu.translate_names.false": "Не лакалізаваны",
-  "option.modmenu.translate_descriptions": "Апісання",
+  "option.modmenu.translate_names.true": "Лакалізаваныя",
+  "option.modmenu.translate_names.false": "Не лакалізаваныя",
+  "option.modmenu.translate_descriptions": "Апісанні",
   "option.modmenu.translate_descriptions.true": "Лакалізаваныя",
   "option.modmenu.translate_descriptions.false": "Не лакалізаваныя",
   "option.modmenu.update_checker": "Праверка абнаўленняў",
@@ -169,10 +173,10 @@
   "option.modmenu.button_update_badge.true": "Паказаны",
   "option.modmenu.button_update_badge.false": "Схаваны",
   "option.modmenu.quick_configure": "Хуткія налады",
-  "option.modmenu.quick_configure.true": "Уключана",
-  "option.modmenu.quick_configure.false": "Адключана",
+  "option.modmenu.quick_configure.true": "Уключаны",
+  "option.modmenu.quick_configure.false": "Адключаны",
   "option.modmenu.update_channel": "Канал абнаўленняў",
   "option.modmenu.update_channel.alpha": "Усё",
-  "option.modmenu.update_channel.beta": "Выпуск і Бэта",
-  "option.modmenu.update_channel.release": "Выпуск"
+  "option.modmenu.update_channel.beta": "Рэлізы + бэта",
+  "option.modmenu.update_channel.release": "Рэлізы"
 }
