--- a/src/main/resources/assets/modmenu/lang/uk_ua.json
+++ b/src/main/resources/assets/modmenu/lang/uk_ua.json
@@ -3,69 +3,70 @@
   "key.modmenu.open_menu": "Відкрити меню модів",
   "modmenu.title": "Моди",
   "modmenu.nameTranslation.modmenu": "Mod Menu",
-  "modmenu.descriptionTranslation.modmenu": "Додає меню для перегляду встановлених модів",
+  "modmenu.descriptionTranslation.modmenu": "Додає меню для перегляду встановлених модів.",
 
   "modmenu.loaded": "(Завантажено: %s)",
   "modmenu.loaded.short": "(%s)",
-  "modmenu.loaded.69.secret": "(Завантажено: %s... Славно)",
-  "modmenu.loaded.420.secret": "(Завантажено: %s... Спали їх)",
+  "modmenu.loaded.69.secret": "(Завантажено: %s… Славно)",
+  "modmenu.loaded.420.secret": "(Завантажено: %s… Спали їх)",
   "modmenu.mods.n": " (%s модів)",
   "modmenu.mods.1": " (%s мод)",
-  "modmenu.mods.69.secret": " (%s модів... Цікаво)",
-  "modmenu.mods.420.secret": " (%s модів... Спали їх)",
+  "modmenu.mods.69.secret": " (%s модів… Цікаво)",
+  "modmenu.mods.420.secret": " (%s модів… Спали їх)",
 
   "modmenu.search": "Пошук модів",
-  "modmenu.searchTerms.library": "api бібліотек",
-  "modmenu.searchTerms.patchwork": "робота над патчем forge fml",
+  "modmenu.searchTerms.library": "api бібліотека",
+  "modmenu.searchTerms.patchwork": "роботапатча forge fml",
   "modmenu.searchTerms.modpack": "пакетмодів пакет",
   "modmenu.searchTerms.deprecated": "застарілий віджилий старий",
-  "modmenu.searchTerms.clientside": "сторонаклієнту сторонагри",
-  "modmenu.searchTerms.configurable": "налаштовуване налаштування налаштовує настроювані параметри налаштувань",
-  "modmenu.searchTerms.hasUpdate": "оновлені версії",
+  "modmenu.searchTerms.clientside": "сторонаклієнта сторонагри",
+  "modmenu.searchTerms.configurable": "налаштовуване налаштування налаштовує налаштовувані параметри налаштувань",
+  "modmenu.searchTerms.hasUpdate": "оновлення версія",
 
   "modmenu.toggleFilterOptions": "Фільтри",
   "modmenu.showingMods.n": "Показано %s модів",
-  "modmenu.showingMods.1": "Показаний %s мод",
+  "modmenu.showingMods.1": "Показано %s мод",
   "modmenu.showingLibraries.n": "Показано %s бібліотек",
-  "modmenu.showingLibraries.1": "Показана %s бібліотека",
+  "modmenu.showingLibraries.1": "Показано %s бібліотеку",
   "modmenu.showingModsLibraries.n.n": "Показано %s модів і %s бібліотек",
-  "modmenu.showingModsLibraries.n.1": "Показано %s модів і %s бібліотека",
-  "modmenu.showingModsLibraries.1.n": "Показаний %s мод і %s бібліотек",
-  "modmenu.showingModsLibraries.1.1": "Показаний %s мод і %s бібліотека",
+  "modmenu.showingModsLibraries.n.1": "Показано %s модів і %s бібліотеку",
+  "modmenu.showingModsLibraries.1.n": "Показано %s мод і %s бібліотек",
+  "modmenu.showingModsLibraries.1.1": "Показано %s мод і %s бібліотеку",
 
   "modmenu.badge.library": "Бібліотека",
   "modmenu.badge.clientsideOnly": "Клієнт",
   "modmenu.badge.deprecated": "Застарілий",
   "modmenu.badge.forge": "Forge",
-  "modmenu.badge.modpack": "Збірка модів",
+  "modmenu.badge.modpack": "Пакет модів",
   "modmenu.badge.minecraft": "Minecraft",
 
   "modmenu.dropInfo.line1": "Перетягніть файли у це",
   "modmenu.dropInfo.line2": "вікно, щоб додати моди",
   "modmenu.dropConfirm": "Хочете додати наступні моди до Minecraft?",
-  "modmenu.dropSuccessful.line1": "Моди скопійовані успішно",
-  "modmenu.dropSuccessful.line2": "Щоб моди запрацювали, перезавантажте гру",
+  "modmenu.dropSuccessful.line1": "Моди успішно скопійовано",
+  "modmenu.dropSuccessful.line2": "Моди запрацюють лише після перезапуску гри",
 
-  "modmenu.modIdToolTip": "ID моду: %s",
-  "modmenu.authorPrefix": "Зроблено %s",
+  "modmenu.modIdToolTip": "ID мода: %s",
+  "modmenu.authorPrefix": "Від %s",
   "modmenu.config": "Змінити налаштування",
-  "modmenu.configure": "Налаштування...",
-  "modmenu.configure.error": "Не вдалося завантажити екран налаштувань %s\nПовідомити в %s, а не в Mod Menu",
-  "modmenu.website": "Сайт моду",
-  "modmenu.issues": "Повідомити про проблему",
+  "modmenu.configure": "Налаштування…",
+  "modmenu.configure.error": "Не вдалося завантажити екран налаштувань %s\nЗвітуйте в %s, а не в Mod Menu",
+  "modmenu.website": "Сайт мода",
+  "modmenu.issues": "Звітувати помилку",
 
-  "modmenu.credits": "Автори:",
+  "modmenu.credits": "Згадки:",
   "modmenu.viewCredits": "Показати авторів",
   "modmenu.license": "Ліцензія:",
   "modmenu.links": "Посилання:",
   "modmenu.source": "Вихідний код",
   "modmenu.hasUpdate": "Оновлення доступне:",
   "modmenu.experimental": "(Перевірка оновлень є експериментальною!)",
-  "modmenu.childHasUpdate": "Дочірній мод цього моду має доступне оновлення",
+  "modmenu.childHasUpdate": "Дочірній мод цього мода має доступне оновлення",
   "modmenu.updateText": "v%s на %s",
   "modmenu.install_version": "Установити версію %s",
   "modmenu.downloadLink": "Завантажити",
 
+  "modmenu.bluesky": "Bluesky",
   "modmenu.buymeacoffee": "Buy me a coffee",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
@@ -73,10 +74,10 @@
   "modmenu.discord": "Discord",
   "modmenu.donate": "Підтримати",
   "modmenu.flattr": "Flattr",
-  "modmenu.github_releases": "Релізи на GitHub",
-  "modmenu.github_sponsors": "GitHub спонсори",
+  "modmenu.github_releases": "Випуски на GitHub",
+  "modmenu.github_sponsors": "Спонсори GitHub",
   "modmenu.kofi": "Ko-fi",
-  "modmenu.liberapay": "Донат на Liberapay",
+  "modmenu.liberapay": "Liberapay",
   "modmenu.mastodon": "Mastodon",
   "modmenu.modrinth": "Modrinth",
   "modmenu.opencollective": "Open Collective",
@@ -84,13 +85,13 @@
   "modmenu.paypal": "PayPal",
   "modmenu.reddit": "Reddit",
   "modmenu.twitch": "Twitch",
-  "modmenu.twitter": "𝕏 (Twitter)",
   "modmenu.wiki": "Wiki",
   "modmenu.youtube": "YouTube",
+  "modmenu.twitter": "𝕏 (Twitter)",
 
   "modmenu.credits.role.author": "Автори",
   "modmenu.credits.role.contributor": "Дописувачі",
-  "modmenu.credits.role.translator": "Локалізатори",
+  "modmenu.credits.role.translator": "Перекладачі",
   "modmenu.credits.role.maintainer": "Супроводжувачі",
   "modmenu.credits.role.playtester": "Тестери",
   "modmenu.credits.role.illustrator": "Ілюстратори",
@@ -100,16 +101,18 @@
   "modmenu.configsFolder": "Відкрити теку налаштувань",
 
   "modmenu.nameTranslation.minecraft": "Minecraft",
-  "modmenu.descriptionTranslation.minecraft": "Базова гра",
+  "modmenu.descriptionTranslation.minecraft": "Усталена гра.",
   "modmenu.nameTranslation.java": "Java",
-  "modmenu.descriptionTranslation.java": "Середовище виконання для Java",
+  "modmenu.descriptionTranslation.java": "Середовище виконання Java.",
+  "modmenu.nameTranslation.fabricloader": "Завантажувач Fabric",
+  "modmenu.descriptionTranslation.fabricloader": "Усталений завантажувач модів.",
   "modmenu.javaDistributionName": "Запуск: %s",
 
   "modmenu.options": "Налаштування Mod Menu",
   "option.modmenu.sorting": "Сортування",
   "option.modmenu.sorting.ascending": "А-Я",
   "option.modmenu.sorting.descending": "Я-А",
-  "option.modmenu.sorting.has_update": "Оновлення доступне:",
+  "option.modmenu.sorting.has_update": "Доступне оновлення:",
   "option.modmenu.show_libraries": "Бібліотеки",
   "option.modmenu.show_libraries.true": "Показано",
   "option.modmenu.show_libraries.false": "Приховано",
@@ -132,18 +135,18 @@
   "option.modmenu.hide_mod_license.true": "Приховано",
   "option.modmenu.hide_mod_license.false": "Показано",
   "option.modmenu.count_children": "Дочірні моди",
-  "option.modmenu.count_children.true": "Враховуються",
-  "option.modmenu.count_children.false": "Не враховуються",
+  "option.modmenu.count_children.true": "Ураховано",
+  "option.modmenu.count_children.false": "Не враховано",
   "option.modmenu.count_libraries": "Бібліотеки",
-  "option.modmenu.count_libraries.true": "Враховуються",
-  "option.modmenu.count_libraries.false": "Не враховуються",
+  "option.modmenu.count_libraries.true": "Ураховано",
+  "option.modmenu.count_libraries.false": "Не враховано",
   "option.modmenu.count_hidden_mods": "Приховані моди",
-  "option.modmenu.count_hidden_mods.true": "Враховуються",
-  "option.modmenu.count_hidden_mods.false": "Не враховуються",
+  "option.modmenu.count_hidden_mods.true": "Ураховано",
+  "option.modmenu.count_hidden_mods.false": "Не враховано",
   "option.modmenu.mod_count_location": "Кількість модів",
   "option.modmenu.mod_count_location.title_screen": "У кутку назви",
   "option.modmenu.mod_count_location.mods_button": "Кнопка",
-  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Всюди",
+  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Усюди",
   "option.modmenu.mod_count_location.none": "Приховано",
   "option.modmenu.easter_eggs": "Прихованки",
   "option.modmenu.easter_eggs.true": "УВІМК.",
@@ -151,21 +154,21 @@
   "option.modmenu.mods_button_style": "Кнопка",
   "option.modmenu.mods_button_style.classic": "Під «Minecraft Realms»",
   "option.modmenu.mods_button_style.replace_realms": "Замість «Minecraft Realms»",
-  "option.modmenu.mods_button_style.shrink": "Поруч з «Minecraft Realms»",
+  "option.modmenu.mods_button_style.shrink": "Біля «Minecraft Realms»",
   "option.modmenu.mods_button_style.icon": "Значок",
-  "option.modmenu.game_menu_button_style": "Ігрове меню(пауза)",
+  "option.modmenu.game_menu_button_style": "Ігрове меню(павза)",
   "option.modmenu.game_menu_button_style.below": "Поруч з «Звітувати помилку»",
   "option.modmenu.game_menu_button_style.replace": "Замість «Звітувати помилку»",
   "option.modmenu.game_menu_button_style.icon": "Значок",
   "option.modmenu.random_java_colors": "Колір Java",
   "option.modmenu.random_java_colors.true": "Постачальник",
-  "option.modmenu.random_java_colors.false": "Завжди червоний",
+  "option.modmenu.random_java_colors.false": "Червоний",
   "option.modmenu.translate_names": "Назви",
-  "option.modmenu.translate_names.true": "Локалізовано",
-  "option.modmenu.translate_names.false": "Не локалізовано",
+  "option.modmenu.translate_names.true": "Перекладено",
+  "option.modmenu.translate_names.false": "Не перекладено",
   "option.modmenu.translate_descriptions": "Описи",
-  "option.modmenu.translate_descriptions.true": "Локалізовано",
-  "option.modmenu.translate_descriptions.false": "Не локалізовано",
+  "option.modmenu.translate_descriptions.true": "Перекладено",
+  "option.modmenu.translate_descriptions.false": "Не перекладено",
   "option.modmenu.update_checker": "Перевірка оновлень",
   "option.modmenu.update_checker.true": "УВІМК.",
   "option.modmenu.update_checker.false": "ВИМК.",
@@ -177,6 +180,6 @@
   "option.modmenu.quick_configure.false": "ВИМК.",
   "option.modmenu.update_channel": "Типи оновлень",
   "option.modmenu.update_channel.alpha": "Усі",
-  "option.modmenu.update_channel.beta": "Релізи і бети",
-  "option.modmenu.update_channel.release": "Релізи"
+  "option.modmenu.update_channel.beta": "Випуски і бети",
+  "option.modmenu.update_channel.release": "Випуски"
 }
