--- a/src/main/resources/assets/modmenu/lang/ms_my.json
+++ b/src/main/resources/assets/modmenu/lang/ms_my.json
@@ -32,7 +32,7 @@
   "modmenu.badge.clientsideOnly": "Klien",
   "modmenu.badge.deprecated": "Tidak Lagi Digunakan",
   "modmenu.badge.forge": "Forge",
-  "modmenu.badge.modpack": "Pek mod",
+  "modmenu.badge.modpack": "Pek Mod",
   "modmenu.badge.minecraft": "Minecraft",
   "modmenu.dropInfo.line1": "Seret dan lepaskan fail ke dalam",
   "modmenu.dropInfo.line2": "tetingkap ini untuk menambahkan mod",
@@ -43,7 +43,7 @@
   "modmenu.authorPrefix": "Oleh %s",
   "modmenu.config": "Sunting Konfigurasi",
   "modmenu.configure": "Konfigurasikan...",
-  "modmenu.configure.error": "Failed to load config screen for '%s'\nReport to '%s', not Mod Menu",
+  "modmenu.configure.error": "Gagal memuatkan skrin konfigurasi untuk '%s'\nLaporkan kepada '%s', bukan Mod Menu",
   "modmenu.website": "Laman Sesawang",
   "modmenu.issues": "Isu",
   "modmenu.credits": "Penghargaan:",
@@ -51,9 +51,9 @@
   "modmenu.license": "Lesen:",
   "modmenu.links": "Pautan:",
   "modmenu.source": "Sumber",
-  "modmenu.hasUpdate": "An update is available:",
-  "modmenu.childHasUpdate": "A child of this mod has an update available.",
-  "modmenu.updateText": "v%s on %s",
+  "modmenu.hasUpdate": "Terdapat kemas kini baharu:",
+  "modmenu.childHasUpdate": "Terdapat kemas kini untuk anak kepada mod ini.",
+  "modmenu.updateText": "v%s di %s",
   "modmenu.buymeacoffee": "Belikan Saya Kopi",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
@@ -74,14 +74,14 @@
   "modmenu.twitch": "Twitch",
   "modmenu.twitter": "Twitter",
   "modmenu.wiki": "Wiki",
-  "modmenu.youtube": "Youtube",
+  "modmenu.youtube": "YouTube",
   "modmenu.modsFolder": "Buka Folder Mod",
   "modmenu.configsFolder": "Buka Folder Konfigurasi",
   "modmenu.nameTranslation.minecraft": "Minecraft",
-  "modmenu.descriptionTranslation.minecraft": "The base game.",
+  "modmenu.descriptionTranslation.minecraft": "Permainan asas.",
   "modmenu.nameTranslation.java": "Java",
-  "modmenu.descriptionTranslation.java": "The Java runtime environment.",
-  "modmenu.javaDistributionName": "Running: %s",
+  "modmenu.descriptionTranslation.java": "Persekitaran masa jalan Java.",
+  "modmenu.javaDistributionName": "Dijalankan: %s",
   "modmenu.options": "Tetapan Mod Menu",
   "option.modmenu.sorting": "Isih",
   "option.modmenu.sorting.ascending": "A-Z",
@@ -121,7 +121,7 @@
   "option.modmenu.mod_count_location.mods_button": "Butang Mod",
   "option.modmenu.mod_count_location.title_screen_and_mods_button": "Kedua-dua",
   "option.modmenu.mod_count_location.none": "Bukan Kedua-Dua",
-  "option.modmenu.easter_eggs": "Easter Eggs",
+  "option.modmenu.easter_eggs": "Easter Egg",
   "option.modmenu.easter_eggs.true": "Didayakan",
   "option.modmenu.easter_eggs.false": "Dinyahdayakan",
   "option.modmenu.mods_button_style": "Butang Mod",
@@ -129,19 +129,19 @@
   "option.modmenu.mods_button_style.replace_realms": "Menggantikan Realms",
   "option.modmenu.mods_button_style.shrink": "Bersebelahan",
   "option.modmenu.mods_button_style.icon": "Ikon",
-  "option.modmenu.random_java_colors": "Java Color",
+  "option.modmenu.random_java_colors": "Warna Java",
   "option.modmenu.random_java_colors.true": "Vendor",
-  "option.modmenu.random_java_colors.false": "Always Red",
-  "option.modmenu.translate_names": "Names",
-  "option.modmenu.translate_names.true": "Localized",
-  "option.modmenu.translate_names.false": "Not Localized",
-  "option.modmenu.translate_descriptions": "Descriptions",
-  "option.modmenu.translate_descriptions.true": "Localized",
-  "option.modmenu.translate_descriptions.false": "Not Localized",
-  "option.modmenu.update_checker": "Update Checker",
+  "option.modmenu.random_java_colors.false": "Sentiasa Merah",
+  "option.modmenu.translate_names": "Nama",
+  "option.modmenu.translate_names.true": "Dilokalisasi",
+  "option.modmenu.translate_names.false": "Tidak Dilokalisasi",
+  "option.modmenu.translate_descriptions": "Keterangan",
+  "option.modmenu.translate_descriptions.true": "Dilokalisasi",
+  "option.modmenu.translate_descriptions.false": "Tidak Dilokalisasi",
+  "option.modmenu.update_checker": "Penyemak Kemas Kini",
   "option.modmenu.update_checker.true": "Didayakan",
   "option.modmenu.update_checker.false": "Dinyahdayakan",
-  "option.modmenu.button_update_badge": "Update Indicator",
+  "option.modmenu.button_update_badge": "Penunjuk Kemas Kini",
   "option.modmenu.button_update_badge.true": "Ditunjukkan",
   "option.modmenu.button_update_badge.false": "Disembunyikan"
 }
