Add Kazakh (kk_KZ) translation

--- a/src/main/resources/assets/modmenu/lang/kk_kz.json
+++ b/src/main/resources/assets/modmenu/lang/kk_kz.json
@@ -1,59 +1,71 @@
 {
   "category.modmenu.name": "Mod Menu",
-  "key.modmenu.open_menu": "Open Mod Menu",
-  "modmenu.title": "Mods",
+  "key.modmenu.open_menu": "Модтар тізімін ашу",
+  "modmenu.title": "Модтар",
   "modmenu.nameTranslation.modmenu": "Mod Menu",
-  "modmenu.descriptionTranslation.modmenu": "Adds a mod menu to view the list of mods you have installed.",
-  "modmenu.loaded": "(%s Loaded)",
+  "modmenu.descriptionTranslation.modmenu": "Орнатылған модтарды көруге арналған ыңғайлы мәзір.",
+
+  "modmenu.loaded": "(%s Жүктелді)",
   "modmenu.loaded.short": "(%s)",
-  "modmenu.loaded.69.secret": "(%s Loaded...nice)",
-  "modmenu.loaded.420.secret": "(%s Loaded...blaze it)",
-  "modmenu.mods.n": " (%s Mods)",
-  "modmenu.mods.1": " (%s Mod)",
-  "modmenu.mods.69.secret": " (%s Mods...nice)",
-  "modmenu.mods.420.secret": " (%s Mods...blaze it)",
-  "modmenu.search": "Search for mods",
-  "modmenu.searchTerms.library": "api library",
-  "modmenu.searchTerms.patchwork": "patchwork forge fml",
-  "modmenu.searchTerms.modpack": "modpack pack",
-  "modmenu.searchTerms.deprecated": "deprecated outdated old",
-  "modmenu.searchTerms.clientside": "clientside gameside",
-  "modmenu.searchTerms.configurable": "configurations configs configures configurable options",
-  "modmenu.toggleFilterOptions": "Toggle Filter Options",
-  "modmenu.showingMods.n": "Showing %s mods",
-  "modmenu.showingMods.1": "Showing %s mod",
-  "modmenu.showingLibraries.n": "Showing %s libraries",
-  "modmenu.showingLibraries.1": "Showing %s library",
-  "modmenu.showingModsLibraries.n.n": "Showing %s mods and %s libraries",
-  "modmenu.showingModsLibraries.n.1": "Showing %s mods and %s library",
-  "modmenu.showingModsLibraries.1.n": "Showing %s mod and %s libraries",
-  "modmenu.showingModsLibraries.1.1": "Showing %s mod and %s library",
-  "modmenu.badge.library": "Library",
-  "modmenu.badge.clientsideOnly": "Client",
-  "modmenu.badge.deprecated": "Deprecated",
+  "modmenu.loaded.69.secret": "(%s Жүктелді...керемет)",
+  "modmenu.loaded.420.secret": "(%s Жүктелді...өртеп жібер)",
+  "modmenu.mods.n": " (%s мод)",
+  "modmenu.mods.1": " (%s ғана мод)",
+  "modmenu.mods.69.secret": " (%s Мод...керемет)",
+  "modmenu.mods.420.secret": " (%s Мод...өртеп жібер)",
+
+  "modmenu.search": "Модтарды іздеу",
+  "modmenu.searchTerms.library": "api апи кітапхана қосымша",
+  "modmenu.searchTerms.patchwork": "patchwork forge fml фордж",
+  "modmenu.searchTerms.modpack": "модпак модтар жинағы жинақ жиын",
+  "modmenu.searchTerms.deprecated": "жарамсыз мерзімі өткен ескірген ескі",
+  "modmenu.searchTerms.clientside": "клиент қолданушы ойын тарапы",
+  "modmenu.searchTerms.configurable": "баптаулар баптау конфиг баптайды конфигтер баптауға болатын нұсқалар опциялар",
+  "modmenu.searchTerms.hasUpdate": "updates version",
+
+  "modmenu.toggleFilterOptions": "Іріктеу",
+  "modmenu.showingMods.n": "%s мод көрсетілді",
+  "modmenu.showingMods.1": "%s ғана мод көрсетілді",
+  "modmenu.showingLibraries.n": "%s кітапхана көрсетілді",
+  "modmenu.showingLibraries.1": "%s ғана кітапхана",
+  "modmenu.showingModsLibraries.n.n": "%s мод және %s кітапхана көрсетілді",
+  "modmenu.showingModsLibraries.n.1": "%s мод және %s ғана кітапхана көрсетілді",
+  "modmenu.showingModsLibraries.1.n": "%s ғана мод және %s кітапхана көрсетілді",
+  "modmenu.showingModsLibraries.1.1": "%s ғана мод және %s ғана кітапхана көрсетілді",
+
+  "modmenu.badge.library": "Кітапхана",
+  "modmenu.badge.clientsideOnly": "Клиент",
+  "modmenu.badge.deprecated": "Ескірген",
   "modmenu.badge.forge": "Forge",
-  "modmenu.badge.modpack": "Modpack",
-  "modmenu.badge.minecraft": "Minecraft",
-  "modmenu.dropInfo.line1": "Drag and drop files into",
-  "modmenu.dropInfo.line2": "this window to add mods",
-  "modmenu.dropConfirm": "Do you want to copy the following mods into the mods directory?",
-  "modmenu.dropSuccessful.line1": "Successfully copied mods",
-  "modmenu.dropSuccessful.line2": "Restart game to load mods",
-  "modmenu.modIdToolTip": "Mod ID: %s",
-  "modmenu.authorPrefix": "By %s",
-  "modmenu.config": "Edit Config",
-  "modmenu.configure": "Configure...",
-  "modmenu.configure.error": "Failed to load config screen for '%s'\nReport to '%s', not Mod Menu",
-  "modmenu.website": "Website",
-  "modmenu.issues": "Issues",
-  "modmenu.credits": "Credits:",
-  "modmenu.viewCredits": "View Credits",
-  "modmenu.license": "License:",
-  "modmenu.links": "Links:",
-  "modmenu.source": "Source",
-  "modmenu.hasUpdate": "An update is available:",
-  "modmenu.childHasUpdate": "A child of this mod has an update available.",
-  "modmenu.updateText": "v%s on %s",
+  "modmenu.badge.modpack": "Мод жинағы",
+  "modmenu.badge.minecraft": "Майнкрафт",
+
+  "modmenu.dropInfo.line1": "Модтарды ойынға қосу үшін,",
+  "modmenu.dropInfo.line2": "файлдарды осы терезеге тастаңыз",
+  "modmenu.dropConfirm": "Мына модтарды мод бумасына көшіруді қалайсыз ба?",
+  "modmenu.dropSuccessful.line1": "Көшіру сәтті аяқталды",
+  "modmenu.dropSuccessful.line2": "Модтарды жүктеу үшін ойынды қайта бастаңыз",
+
+  "modmenu.modIdToolTip": "Мод ID-і: %s",
+  "modmenu.authorPrefix": "Авторы %s",
+  "modmenu.config": "Баптауды өңдеу",
+  "modmenu.configure": "Баптау...",
+  "modmenu.configure.error": "'%s' үшін баптау экраны жүктелмеді\nБұл жайыт бойынша Mod Menu-ге емес, '%s' дегенге хабарласыңыз",
+  "modmenu.website": "Сайт",
+  "modmenu.issues": "Ақаулар",
+
+  "modmenu.credits": "Авторлар:",
+  "modmenu.viewCredits": "Авторларды көру",
+  "modmenu.license": "Лицензия:",
+  "modmenu.links": "Сілтемелер:",
+  "modmenu.source": "Дереккөз",
+  "modmenu.experimental": "(Mod Menu жаңарту тексергіші сынақтық режимде!)",
+  "modmenu.hasUpdate": "Жаңарту қолжетімді:",
+  "modmenu.childHasUpdate": "Осы модқа тәуелді модқа жаңарту қолжетімді",
+  "modmenu.updateText": "%s нұсқасы, %s",
+  "modmenu.install_version": "%s нұсқасын орнату",
+  "modmenu.downloadLink": "Жүктеу",
+
   "modmenu.buymeacoffee": "Buy Me a Coffee",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
@@ -61,8 +73,8 @@
   "modmenu.discord": "Discord",
   "modmenu.donate": "Донат",
   "modmenu.flattr": "Flattr",
-  "modmenu.github_releases": "GitHub Releases",
-  "modmenu.github_sponsors": "GitHub Sponsors",
+  "modmenu.github_releases": "GitHub Релиздері",
+  "modmenu.github_sponsors": "GitHub Демеушілері",
   "modmenu.kofi": "Ko-fi",
   "modmenu.liberapay": "Liberapay",
   "modmenu.mastodon": "Mastodon",
@@ -73,75 +85,98 @@
   "modmenu.reddit": "Reddit",
   "modmenu.twitch": "Twitch",
   "modmenu.twitter": "Twitter",
-  "modmenu.wiki": "Wiki",
+  "modmenu.wiki": "Уики",
   "modmenu.youtube": "YouTube",
-  "modmenu.modsFolder": "Open Mods Folder",
-  "modmenu.configsFolder": "Open Configs Folder",
+
+  "modmenu.credits.role.author": "Авторлар",
+  "modmenu.credits.role.contributor": "Үлес қосушылар",
+  "modmenu.credits.role.translator": "Аудармашылар",
+  "modmenu.credits.role.maintainer": "Жауаптылар",
+  "modmenu.credits.role.playtester": "Ойын сынаушылар",
+  "modmenu.credits.role.illustrator": "Суретшілер",
+  "modmenu.credits.role.owner": "Иелері",
+
+  "modmenu.modsFolder": "Модтар бумасын ашу",
+  "modmenu.configsFolder": "Баптау бумасын ашу",
+
   "modmenu.nameTranslation.minecraft": "Minecraft",
-  "modmenu.descriptionTranslation.minecraft": "The base game.",
+  "modmenu.descriptionTranslation.minecraft": "Негізгі ойын.",
   "modmenu.nameTranslation.java": "Java",
-  "modmenu.descriptionTranslation.java": "The Java runtime environment.",
-  "modmenu.javaDistributionName": "Running: %s",
-  "modmenu.options": "Mod Menu Options",
-  "option.modmenu.sorting": "Sort",
-  "option.modmenu.sorting.ascending": "A-Z",
-  "option.modmenu.sorting.descending": "Z-A",
-  "option.modmenu.show_libraries": "Libraries",
-  "option.modmenu.show_libraries.true": "Shown",
-  "option.modmenu.show_libraries.false": "Hidden",
-  "option.modmenu.hide_config_buttons": "Config Buttons",
-  "option.modmenu.hide_config_buttons.true": "Hidden",
-  "option.modmenu.hide_config_buttons.false": "Shown",
-  "option.modmenu.hide_badges": "Mod Badges",
-  "option.modmenu.hide_badges.true": "Hidden",
-  "option.modmenu.hide_badges.false": "Shown",
-  "option.modmenu.compact_list": "List",
-  "option.modmenu.compact_list.true": "Compact",
-  "option.modmenu.compact_list.false": "Standard",
-  "option.modmenu.hide_mod_links": "Mod Links",
-  "option.modmenu.hide_mod_links.true": "Hidden",
-  "option.modmenu.hide_mod_links.false": "Shown",
-  "option.modmenu.hide_mod_credits": "Mod Credits",
-  "option.modmenu.hide_mod_credits.true": "Hidden",
-  "option.modmenu.hide_mod_credits.false": "Shown",
-  "option.modmenu.hide_mod_license": "Mod License",
-  "option.modmenu.hide_mod_license.true": "Hidden",
-  "option.modmenu.hide_mod_license.false": "Shown",
-  "option.modmenu.count_children": "Children",
-  "option.modmenu.count_children.true": "Counted",
-  "option.modmenu.count_children.false": "Not Counted",
-  "option.modmenu.count_libraries": "Libraries",
-  "option.modmenu.count_libraries.true": "Counted",
-  "option.modmenu.count_libraries.false": "Not Counted",
-  "option.modmenu.count_hidden_mods": "Hidden Mods",
-  "option.modmenu.count_hidden_mods.true": "Counted",
-  "option.modmenu.count_hidden_mods.false": "Not Counted",
-  "option.modmenu.mod_count_location": "Mod Count",
-  "option.modmenu.mod_count_location.title_screen": "Title Corner",
-  "option.modmenu.mod_count_location.mods_button": "Mods Button",
-  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Both",
-  "option.modmenu.mod_count_location.none": "Neither",
-  "option.modmenu.easter_eggs": "Easter Eggs",
-  "option.modmenu.easter_eggs.true": "Enabled",
-  "option.modmenu.easter_eggs.false": "Disabled",
-  "option.modmenu.mods_button_style": "Mods Button",
-  "option.modmenu.mods_button_style.classic": "Below Realms",
-  "option.modmenu.mods_button_style.replace_realms": "Replace Realms",
-  "option.modmenu.mods_button_style.shrink": "Adjacent",
-  "option.modmenu.mods_button_style.icon": "Icon",
-  "option.modmenu.random_java_colors": "Java Color",
-  "option.modmenu.random_java_colors.true": "Vendor",
-  "option.modmenu.random_java_colors.false": "Always Red",
-  "option.modmenu.translate_names": "Names",
-  "option.modmenu.translate_names.true": "Localized",
-  "option.modmenu.translate_names.false": "Not Localized",
-  "option.modmenu.translate_descriptions": "Descriptions",
-  "option.modmenu.translate_descriptions.true": "Localized",
-  "option.modmenu.translate_descriptions.false": "Not Localized",
-  "option.modmenu.update_checker": "Update Checker",
-  "option.modmenu.update_checker.true": "Enabled",
-  "option.modmenu.update_checker.false": "Disabled",
-  "option.modmenu.button_update_badge": "Update Indicator",
-  "option.modmenu.button_update_badge.true": "Shown",
-  "option.modmenu.button_update_badge.false": "Hidden"
+  "modmenu.descriptionTranslation.java": "Java орындаушы ортасы.",
+  "modmenu.javaDistributionName": "Іске қосулы: %s",
+
+  "modmenu.options": "Mod Menu баптаулары",
+  "option.modmenu.sorting": "Іріктеу",
+  "option.modmenu.sorting.ascending": "Басынан",
+  "option.modmenu.sorting.descending": "Соңынан",
+  "option.modmenu.sorting.has_update": "Жаңарту бар",
+  "option.modmenu.show_libraries": "Кітапханаларды көру",
+  "option.modmenu.show_libraries.true": "Иә",
+  "option.modmenu.show_libraries.false": "Жоқ",
+  "option.modmenu.hide_config_buttons": "Баптау батырмалары",
+  "option.modmenu.hide_config_buttons.true": "Жоқ",
+  "option.modmenu.hide_config_buttons.false": "Иә",
+  "option.modmenu.hide_badges": "Мод белгілері",
+  "option.modmenu.hide_badges.true": "Жоқ",
+  "option.modmenu.hide_badges.false": "Иә",
+  "option.modmenu.compact_list": "Тізім",
+  "option.modmenu.compact_list.true": "Ықшам",
+  "option.modmenu.compact_list.false": "Кәдімгі",
+  "option.modmenu.hide_mod_links": "Сілтемені көру",
+  "option.modmenu.hide_mod_links.true": "Жоқ",
+  "option.modmenu.hide_mod_links.false": "Иә",
+  "option.modmenu.hide_mod_credits": "Авторларды белгілеу",
+  "option.modmenu.hide_mod_credits.true": "Жоқ",
+  "option.modmenu.hide_mod_credits.false": "Иә",
+  "option.modmenu.hide_mod_license": "Лицензияны көру",
+  "option.modmenu.hide_mod_license.true": "Жоқ",
+  "option.modmenu.hide_mod_license.false": "Иә",
+  "option.modmenu.count_children": "Тәуелді модтарды санау",
+  "option.modmenu.count_children.true": "Иә",
+  "option.modmenu.count_children.false": "Жоқ",
+  "option.modmenu.count_libraries": "Кітапханаларды санау",
+  "option.modmenu.count_libraries.true": "Иә",
+  "option.modmenu.count_libraries.false": "Жоқ",
+  "option.modmenu.count_hidden_mods": "Жасырын модтарды санау",
+  "option.modmenu.count_hidden_mods.true": "Иә",
+  "option.modmenu.count_hidden_mods.false": "Жоқ",
+  "option.modmenu.mod_count_location": "Модтар саны",
+  "option.modmenu.mod_count_location.title_screen": "Басты бұрыш",
+  "option.modmenu.mod_count_location.mods_button": "Модтар батырмасы",
+  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Екеуі де",
+  "option.modmenu.mod_count_location.none": "Ешқайсысы",
+  "option.modmenu.easter_eggs": "Құпиялар :) ",
+  "option.modmenu.easter_eggs.true": "Иә",
+  "option.modmenu.easter_eggs.false": "Жоқ",
+  "option.modmenu.mods_button_style": "Модтар батырмасы",
+  "option.modmenu.mods_button_style.classic": "Realms астында",
+  "option.modmenu.mods_button_style.replace_realms": "Realms орнына",
+  "option.modmenu.mods_button_style.shrink": "Жанында",
+  "option.modmenu.mods_button_style.icon": "Таңбаша",
+  "option.modmenu.game_menu_button_style": "Ойын мәзірі",
+  "option.modmenu.game_menu_button_style.insert": "Қосу",
+  "option.modmenu.game_menu_button_style.replace": "Ауыстыру",
+  "option.modmenu.game_menu_button_style.icon": "Таңбаша",
+  "option.modmenu.random_java_colors": "Java түсі",
+  "option.modmenu.random_java_colors.true": "Жеткізушіден",
+  "option.modmenu.random_java_colors.false": "Әрқашан қызыл",
+  "option.modmenu.translate_names": "Атауларды бейімдеу",
+  "option.modmenu.translate_names.true": "Иә",
+  "option.modmenu.translate_names.false": "Жоқ",
+  "option.modmenu.translate_descriptions": "Сипаттамаларды бейімдеу",
+  "option.modmenu.translate_descriptions.true": "Иә",
+  "option.modmenu.translate_descriptions.false": "Жоқ",
+  "option.modmenu.update_checker": "Жаңартуларды тексеру",
+  "option.modmenu.update_checker.true": "Иә",
+  "option.modmenu.update_checker.false": "Жоқ",
+  "option.modmenu.button_update_badge": "Жаңарту белгісі",
+  "option.modmenu.button_update_badge.true": "Иә",
+  "option.modmenu.button_update_badge.false": "Жоқ",
+  "option.modmenu.quick_configure": "Жылдам баптау",
+  "option.modmenu.quick_configure.true": "Иә",
+  "option.modmenu.quick_configure.false": "Жоқ",
+  "option.modmenu.update_channel": "Жаңарту арнасы",
+  "option.modmenu.update_channel.alpha": "Барлығы",
+  "option.modmenu.update_channel.beta": "Релиз және Бета",
+  "option.modmenu.update_channel.release": "Релиз"
 }
