Update Malay and Malay (Jawi) translation (#961)
Simply updates the translation for the "Easter Egg" option

--- a/src/main/resources/assets/modmenu/lang/zlm_arab.json
+++ b/src/main/resources/assets/modmenu/lang/zlm_arab.json
@@ -121,7 +121,7 @@
   "option.modmenu.mod_count_location.mods_button": "بوتڠ مود",
   "option.modmenu.mod_count_location.title_screen_and_mods_button": "کدوا-دوا",
   "option.modmenu.mod_count_location.none": "بوکن کدوا-دوا",
-  "option.modmenu.easter_eggs": "Easter Egg",
+  "option.modmenu.easter_eggs": "اوڠکڤن رهسيا",
   "option.modmenu.easter_eggs.true": "دداياكن",
   "option.modmenu.easter_eggs.false": "دڽهداياكن",
   "option.modmenu.mods_button_style": "بوتڠ مود",
